# MagicPodsCore

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  api-reference.md  main.py  rundocker.sh
aap/enums/: enums.py  pids.py
aap/packets/: Init.py  anc_control.py  notifications.py  packet.py
aap/watchers/: anc_control_watcher.py  battery_watcher.py  watcher.py
bt/: service.py
config/: Config.h.in
dependencies/: CMakeLists.txt
dependencies/json/: CMakeLists.txt
dependencies/sdbus-cpp/: CMakeLists.txt
dependencies/toml++/: CMakeLists.txt
dependencies/uSockets/: CMakeLists.txt
dependencies/uWebSockets/: CMakeLists.txt
src/: AppleProductIds.h  BlockingQueue.h  BtVendorIds.h  Device.cpp  Device.h  DeviceAnc.cpp  DeviceAnc.h  DeviceBattery.cpp  DeviceBattery.h  DevicesInfoFetcher.cpp  DevicesInfoFetcher.h  Event.h  Logger.h  ObservableVariable.h  StringUtils.h  aap.cpp  appleproductids.h  btvendorids.h  main.cpp  mainSonyTests.cpp  test_main.cpp  test_main3.cpp  toml_main.cpp
src/aap/: Aap.cpp  Aap.h  AapClient.cpp  AapClient.h  AapHelper.cpp  aap.cpp  aap.h
src/aap/enums/: AapAncMode.h  AapChargingStatus.h  AapCmdSettings.h  AapModelIds.h  AapNotificationsMode.h
src/aap/setters/: AapEnableNotifications.cpp  AapEnableNotifications.h  AapInitExt.cpp  AapInitExt.h  AapRequest.h  AapSetAnc.cpp  AapSetAnc.h
src/aap/watchers/: AapAncWatcher.cpp  AapAncWatcher.h  AapBatteryWatcher.cpp  AapBatteryWatcher.h  AapWatcher.cpp  AapWatcher.h
src/ble_ads/: BleAdverisingData.h  BleAdvertisingService.h  DBusBasedBleAdvertisingService.cpp  DBusBasedBleAdvertisingService.h  PassiveHciBasedBleAdvertisingService.cpp  PassiveHciBasedBleAdvertisingService.h
src/client/: Client.cpp  Client.h  ClientConnectionType.h  IRequest.h
src/dbus/: DBusDeviceInfo.cpp  DBusDeviceInfo.h  DBusDeviceModalias.h  DBusService.cpp  DBusService.h
src/device/: AapDevice.cpp  AapDevice.h  BhfDevice.cpp  BhfDevice.h  Device.cpp  Device.h  DeviceBattery.cpp  DeviceBattery.h  GalaxyBudsDevice.cpp  GalaxyBudsDevice.h
src/device/capabilities/: Capability.cpp  Capability.h
src/device/capabilities/aap/: AapAapPressAndHoldDurationCapability.cpp  AapAapPressAndHoldDurationCapability.h  AapAdaptiveAudioNoiseCapability.cpp  AapAdaptiveAudioNoiseCapability.h  AapAncCapability.cpp  AapAncCapability.h  AapBatteryCapability.cpp  AapBatteryCapability.h  AapCapability.cpp  AapCapability.h  AapConversationAwarenessCapability.cpp  AapConversationAwarenessCapability.h  AapConversationAwarenessStateCapability.cpp  AapConversationAwarenessStateCapability.h  AapMuteMicrophoneEndCallCapability.cpp  AapMuteMicrophoneEndCallCapability.h  AapNoiseCancellationOneAirPodModeCapability.cpp  AapNoiseCancellationOneAirPodModeCapability.h  AapPersonalizedVolumeCapability.cpp  AapPersonalizedVolumeCapability.h  AapPressAndHoldDurationCapability.cpp  AapPressAndHoldDurationCapability.h  AapPressSpeedCapability.cpp  AapPressSpeedCapability.h  AapToneVolumeCapability.cpp  AapToneVolumeCapability.h  AapVolumeSwipeCapability.cpp  AapVolumeSwipeCapability.h  AapVolumeSwipeLengthCapability.cpp  AapVolumeSwipeLengthCapability.h  AppAnimationCapability.cpp  AppAnimationCapability.h
src/device/capabilities/bhf/: BhfBatteryCapability.cpp  BhfBatteryCapability.h
src/device/capabilities/cmn/: CmnBluetoothCodecCapability.cpp  CmnBluetoothCodecCapability.h
src/device/capabilities/sgb/: GalaxyBudsAncCapability.cpp  GalaxyBudsAncCapability.h  GalaxyBudsBatteryCapability.cpp  GalaxyBudsBatteryCapability.h  GalaxyBudsCapability.cpp  GalaxyBudsCapability.h
src/device/enums/: DeviceAncModes.h  DeviceBatteryStatus.h  DeviceBatteryType.h
src/device/structs/: DeviceBatteryData.h
src/pulseaudio/: PulseAudioClient.cpp  PulseAudioClient.h
src/sdk/aap/: AapHelper.cpp  AapHelper.h  Aes.cpp  Aes.h
src/sdk/aap/enums/: AapAapPressAndHoldDurationMode.h  AapAncMode.h  AapBatteryType.h  AapChargingStatus.h  AapCmd.h  AapCmdSettings.h  AapConversationAwarenessMode.h  AapConversationAwarenessState.h  AapModelIds.h  AapMuteMicrophoneEndCall.h  AapNoiseCancellationOneAirPodMode.h  AapNotificationsMode.h  AapPersonalizedVolumeMode.h  AapPressAndHoldDurationMode.h  AapPressSpeedMode.h  AapPrivateKeysType.h  AapVolumeSwipeLengthMode.h  AapVolumeSwipeMode.h
src/sdk/aap/setters/: AapEnableNotifications.cpp  AapEnableNotifications.h  (+30 more)
src/sdk/sgb/: Crc16.cpp  Crc16.h  GalaxyBudsHelper.cpp  GalaxyBudsHelper.h  GalaxyBudsPacket.cpp  GalaxyBudsPacket.h  main.cpp
src/settings/: JsonToTomlConverter.cpp  JsonToTomlConverter.h  SettingsService.cpp  SettingsService.h  UpdatedSettingNotification.h
src/sgb/: Crc16.cpp  Crc16.h  GalaxyBudsAncWatcher.cpp  GalaxyBudsAncWatcher.h  GalaxyBudsBatteryWatcher.cpp  GalaxyBudsBatteryWatcher.h  GalaxyBudsColoredModelIds.h  GalaxyBudsEarDetectionState.h  GalaxyBudsEarDetectionWatcher.h  GalaxyBudsHelper.cpp  GalaxyBudsHelper.h  GalaxyBudsLegacyEarDetectionState.h  GalaxyBudsModelIds.h  GalaxyBudsMsgIds.h  GalaxyBudsMsgTypes.h  GalaxyBudsPacket.cpp  GalaxyBudsPacket.h  GalaxyBudsResponseData.h  GalaxyBudsSetAnc.h  crc16.cpp  crc16.h  main  main.cpp  make_test.sh  sgb.h
src/sgb/enums/: GalaxyBudsAnc.h  GalaxyBudsColoredModelIds.h  GalaxyBudsMsgIds.h  GalaxyBudsMsgTypes.h
src/sgb/setters/: GalaxyBudsSetAnc.h
src/sgb/structs/: GalaxyBudsEarDetectionStateArgs.h  GalaxyBudsResponseData.h
src/sgb/watchers/: GalaxyBudsAncWatcher.cpp  GalaxyBudsAncWatcher.h  GalaxyBudsBatteryWatcher.cpp  GalaxyBudsBatteryWatcher.h  GalaxyBudsEarDetectionWatcher.cpp  GalaxyBudsEarDetectionWatcher.h
src/sony/: Sony.cpp  Sony.h  SonyAncHelper.cpp  SonyAncHelper.h  SonyAncWatcher.cpp  SonyAncWatcher.h  SonyBaseCmd.cpp  SonyBaseCmd.h  SonyBaseWatcher.cpp  SonyBaseWatcher.h  SonyClient.cpp  SonyClient.h  SonyEnums.h  SonyGetAnc.cpp  SonyGetAnc.h  SonyGetCaseBattery.cpp  SonyGetCaseBattery.h  SonyGetHeadphonesBattery.cpp  SonyGetHeadphonesBattery.h  SonyProductIds.h  SonySetAnc.cpp  SonySetAnc.h  SonyStructs.h
src/test/: Device.h
src/tests/: TestsAapBle.cpp  TestsAapBle.h  TestsSgb.cpp  TestsSgb.h
ui/: console.py  console.tcss
(+47 files in other folders)
